# talloc

./: .gitignore  pyproject.toml
config/: variable_interval.yml
talloc/: sample.py  variable_interval.py
tests/: test_talloc.py
