[tool.poetry]
name = "talloc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pino = {git = "https://github.com/GrudgeDuck/pino"}
amas = {git = "https://github.com/GrudgeDuck/amas"}
numpy = "^1.18.5"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = {extras = ["all"], version = "^0.33.1"}
pyflakes = "^2.2.0"
pycodestyle = "^2.6.0"
isort = "^4.3.21"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
